--- a/css/Castiglion_FiorentinoStili.css
+++ b/css/Castiglion_FiorentinoStili.css
@@ -1,84 +1,40 @@
+//Castiglion Fiorentino
 #popolazione {
 background-color: red;
-
+   
 }
-
+   
 #storia {
     background: yellow;
     float: left;
-    
+   
 }
-
+   
 h1{
-    text-align: center;
-    color: green;
+    text-align: center;   /* Castiglion Fiorentino, Sinalunga */
+    color: green;   /* Castiglion Fiorentino, Civitella in Val di Chiana */
 }
-
+   
 #sto {
-    position:relative;						
-    top:0px;					
+    position:relative;                  
+    top:0px;               
     left:100px;
     color: red;
 }
 #popo {
-    position:relative;						
-    top:0px;					
+    position:relative;                  
+    top:0px;               
     left:100px;
     color: black;
 }
-
-body {					
-   margin:	20px;					
-   padding:		20px;				
-   font-size: 	80%;	
-   font-family:	Verdana, Geneva, Arial, Helvetica, sans-serif ;				
-   text-align:	left;			
-   background:	;				
-}		
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+   
+body {               
+   margin:   20px;               
+   padding:      20px;            
+   font-size:    80%;      /* Castiglion Fibocchi, Castiglion Fiorentino */
+   font-family:   Verdana, Geneva, Arial, Helvetica, sans-serif ;               /* Castiglion Fiorentino, Civitella in Val di Chiana */
+   text-align:   left;         
+   background:   ;            
+}      
+   
+   
