--- a/css/Chiusi.css
+++ b/css/Chiusi.css
@@ -1,20 +1,18 @@
-
-
-
-
+//Chiusi
+   
 .titolo{
-	text-align: center;
-	color: green;
+   text-align: center;
+   color: green;
 }
-
+   
 #immagine{
-	width:20px;
-	height:20px;
+   width:20px;
+   height:20px;
 }
 #storia{
-	width:700px;
+   width:700px;   /* Chiusi, Monterchi */
 }
-
+   
 .sinistra,.destra {
   float: left;
   width: 50%;
@@ -27,19 +25,19 @@
 .destra {
   padding-left: 20px;
 }
-
+   
 .colore{
-	color:red;
+   color:red;
 }
-
+   
 .border{
-	
-	border: 1px solid black;
-	text-align: center;
+   
+   border: 1px solid black;
+   text-align: center;
 }
-
+   
 .tabella{
-	width:100%;
-	border: 1px solid black;
-	
+   width:100%;
+   border: 1px solid black;
+   
 }
