--- a/css/Monte_San_Savino.css
+++ b/css/Monte_San_Savino.css
@@ -1,73 +1,74 @@
+//Monte_San_Savino
 #locazione, #storia, #popolazione, #territorio, #chiese {
-	content:10px;
-	padding:10px;
-	border:10px;
-	margin:30px;
-	text-align: justify;
+   content:10px;
+   padding:10px;
+   border:10px;
+   margin:30px;
+   text-align: justify;
 }
-
+   
 h2 {
-	color:RGB(0,0,0);
-	height:2px;
-	padding:10px;
-	border:10px;
-	margin:30px;
-	text-align: center;
-	content:10px
+   color:RGB(0,0,0);
+   height:2px;
+   padding:10px;
+   border:10px;
+   margin:30px;
+   text-align: center;
+   content:10px
 }
-
+   
 body {
-	background-color:#FDEEF4;
+   background-color:#FDEEF4;   /* Monte_San_Savino, Monte Santa Maria Tiberina , Sinalunga */
 }
-
-
+   
+   
 #cartina {
-	position:fixed;
-	float: right;
-	height: 45%;
-	width: 18%;
-	margin:30px;
-	padding:10px;
-	border:10px;
-	margin-left:1070px;
-	
-	
+   position:fixed;
+   float: right;
+   height: 45%;
+   width: 18%;
+   margin:30px;
+   padding:10px;
+   border:10px;
+   margin-left:1070px;
+   
+   
 }
-
+   
 #titolo {
-	margin:30px;
-	text-align:center;
-	color:RGB(155,0,0);
+   margin:30px;
+   text-align:center;
+   color:RGB(155,0,0);
 }
-
+   
 #testo {
-	margin-right:250px;
-	border-right:5px solid black;
+   margin-right:250px;   /* Laterina, Monte_San_Savino, Sinalunga */
+   border-right:5px solid black;   /* Laterina, Monte_San_Savino */
 }
-
-
+   
+   
 #comuni1{
-	margin-right:150px;
-	float:left;
-	margin-left:150px;
+   margin-right:150px;
+   float:left;
+   margin-left:150px;
 }
-
-
+   
+   
 #comuni2{
-
+   
 }
-
+   
 #segnalibri{
-	position:fixed;
-	margin-left:1070px;
-	margin-top: 400px;
+   position:fixed;
+   margin-left:1070px;
+   margin-top: 400px;
 }
-
+   
 #stemma{
-	height:15%;
-	width:15%;
-	float: left;
-	margin-top:40px;
-	margin-left:25px;
+   height:15%;   /* Castiglion Fibocchi, Monte_San_Savino, Monte Santa Maria Tiberina , Sinalunga */
+   width:15%;   /* Castiglion Fibocchi, css (), Monte_San_Savino, Monte Santa Maria Tiberina , Sinalunga */
+   float: left;   /* Castiglion Fibocchi, Monte_San_Savino, Monterchi, Sinalunga */
+   margin-top:40px;
+   margin-left:25px;   /* Arezzo, Monte_San_Savino */
 }
-
+   
