--- a/css/Monte_Santa_Maria_Tiberina.css
+++ b/css/Monte_Santa_Maria_Tiberina.css
@@ -1,37 +1,38 @@
+//Monte Santa Maria Tiberina 
 #stemma{
-	width:80px;
-	height:auto;
+   width:80px;   /* Castiglion Fibocchi, css (), Monte_San_Savino, Monte Santa Maria Tiberina , Sinalunga */
+   height:auto;   /* Castiglion Fibocchi, Monte_San_Savino, Monte Santa Maria Tiberina , Sinalunga */
 }
-
+   
 #comune{
-	font-weight:bold;
-	color:rgb(13, 13, 13);
+   font-weight:bold;
+   color:rgb(13, 13, 13);
 }
-
+   
 #div_img{
-	width:100px;
-	float: left;
+   width:100px;
+   float: left;
 }
-
+   
 #div_titolo{
-	float:left;
-	display:block;
+   float:left;
+   display:block;
 }
-
+   
 body{
-	background-color:rgb(209, 209, 224);
+   background-color:rgb(209, 209, 224);   /* Monte_San_Savino, Monte Santa Maria Tiberina , Sinalunga */
 }
-
+   
 section{
-	width:800px;
+   width:800px;   /* Castiglion Fibocchi, Monte Santa Maria Tiberina  */
 }
 #storia{
-	background-color:rgb(166, 166, 166);
+   background-color:rgb(166, 166, 166);
 }
-
+   
 #altro{
-	background-color:rgb(166, 166, 166);
-	position: absolute;
-	right: 100px;
-	top: 40px;
+   background-color:rgb(166, 166, 166);
+   position: absolute;
+   right: 100px;
+   top: 40px;
 }
