--- a/css/Sinalunga_css.css
+++ b/css/Sinalunga_css.css
@@ -1,35 +1,36 @@
+//Sinalunga
 body {
-    background-color: white;
+    background-color: white;   /* Monte_San_Savino, Monte Santa Maria Tiberina , Sinalunga */
 }
-
+   
 p {
-    margin-right: 40%
+    margin-right: 40%   /* Civitella in Val di Chiana, Sinalunga */
 }
-
+   
 h3 {
     margin-right: 40%;
 }
-
+   
 ul {
     margin-right: 40%;
 }
-
+   
 #testo {
-    margin-right: 25%;
+    margin-right: 25%;   /* Laterina, Monte_San_Savino, Sinalunga */
 }
-
+   
 #prima_parte {
     height: 300px;
     width: 300px;
     margin-left: 70%;
     position: relative;
 }
-
+   
 #mappa {
-    height: 300px;
-    width: 300px;
+    height: 300px;   /* Castiglion Fibocchi, Sinalunga */
+    width: 300px;   /* Castiglion Fibocchi, Civitella in Val di Chiana, Sinalunga */
 }
-
+   
 ul {
     list-style-type: none;
     margin: 0;
@@ -37,38 +38,40 @@ ul {
     width: 300px;
     background-color: #f1f1f1;
 }
-  
+   
 li a {
     display: block;
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
 }
-  
+   
 li a.active {
     background-color: #4CAF50;
     color: white;
 }
-  
+   
 li a:hover:not(.active) {
     background-color: #555;
     color: white;
 }
-
+   
 #stemma {
-    height: 200px;
-    width: 200px;
-    float: left;
-    
+    height: 200px;   /* Castiglion Fibocchi, Monte_San_Savino, Monte Santa Maria Tiberina , Sinalunga */
+    width: 200px;   /* Castiglion Fibocchi, css (), Monte_San_Savino, Monte Santa Maria Tiberina , Sinalunga */
+    float: left;   /* Castiglion Fibocchi, Monte_San_Savino, Monterchi, Sinalunga */
+   
 }
-
+   
 hr {
     margin-right: 40%;
 }
-
+   
 h1 {
-    text-align: center;
+    text-align: center;   /* Castiglion Fiorentino, Sinalunga */
     margin-right: 50%;
     margin-top: 5%;
     float: left;
 }
+   
+   
